--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -1,3 +1,14 @@
-.foo {
-  content: 'bar';
-}
+// Bootstrap overrides
+@import "bootstrap/variables";
+
+// Import base stylesheets
+@import "~@concretecms/bedrock/assets/bedrock/scss/frontend";
+
+// Import project stuff
+@import "variables";
+
+@import "global/fonts";
+@import "global/footer";
+@import "global/global";
+@import "global/header";
+@import "global/main";
